basic layout of about us ffinished!

--- a/styles/about-us.css
+++ b/styles/about-us.css
@@ -8,19 +8,44 @@ body {
     grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
+.spacing {
+    height: 35%;
+}
+
+p {
+    margin: 0px 30px;
+}
+
 #div-g {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
+
     background: #b6ff00;
 }
 
 #div-r {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     background: #ff0000;
 }
 
 #div-y {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     background: #ffae00;
 }
 
 #div-b {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: flex-start;
     background: #0094ff;
 }
 
