added cursor asset

--- a/styles/game.css
+++ b/styles/game.css
@@ -5,6 +5,7 @@
     align-items: flex-end;
     width: 100%;
     background-position-y: 90%;
+    cursor: url('../assets/dinoCursor.png'), auto;
 }
 
 #egg-img {
@@ -15,4 +16,7 @@
     display: flex;
     justify-content: center;
     margin-right: 15%;
+}
+#egg-div:hover {
+    cursor: url('../assets/egg-crack.gif'), auto;
 }
