--- a/styles/global.css
+++ b/styles/global.css
@@ -16,6 +16,7 @@ body {
     font-family: var(--primary-font);
     color: var(--text-color);
     background: var(--background);
+    
     /* display: grid; */
     /* grid-template-rows: auto 1fr; */
 }
@@ -74,4 +75,7 @@ main {
 .right-dinos {
     -webkit-transform: scaleX(-1);
     transform: scaleX(-1);
+}
+
+.custom-cur {
 }
