--- a/styles/global.css
+++ b/styles/global.css
@@ -4,7 +4,7 @@
     --text-color: rgb(7, 5, 68);
     --label-color: rgb(75, 102, 98);
     --placeholder-color: rgb(136, 136, 153);
-    --offset-color: rgb(217, 236, 217);
+    /* --offset-color: rgb(217, 236, 217); */
     --action-color: rgb(77, 132, 252);
 
     --primary-font: 'Rubik', Corbel, 'Lucida Grande', 'Lucida Sans Unicode', 'Lucida Sans',
@@ -16,7 +16,7 @@ body {
     font-family: var(--primary-font);
     color: var(--text-color);
     background: var(--background);
-    
+
     /* display: grid; */
     /* grid-template-rows: auto 1fr; */
 }
@@ -77,5 +77,79 @@ main {
     transform: scaleX(-1);
 }
 
-.custom-cur {
+#auth-body {
+    background-image: url('../assets/JungleBackgroundAuth.gif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    font-family: cursive;
+    box-shadow: horizontal-offset vertical-offset blur-radius spread-radius(black);
+    color: rgb(252, 253, 253);
+}
+
+#auth-form {
+    background-image: url('../assets/cometGif.gif');
+    background-repeat: no-repeat;
+    background-size: cover;
+    border: 0px;
+}
+
+#sign-in-btn {
+    background: rgba(0, 0, 0, 0.2);
+    box-shadow: horizontal-offset vertical-offset blur-radius spread-radius(black);
+    font-weight: bold;
+    /* ask about adding drop shadow to font only */
+}
+
+#sign-in-btn:before {
+    content: '';
+    background: linear-gradient(45deg, #000914, #090d14, #0a0914, black, black);
+    position: absolute;
+    top: -2px;
+    left: -2px;
+    background-size: 400%;
+    z-index: -1;
+    filter: blur(5px);
+    width: calc(100% + 4px);
+    height: calc(100% + 4px);
+    animation: glowing 10s linear infinite;
+    opacity: 0;
+    transition: opacity 0.3s ease-in-out;
+    border-radius: 80%;
+}
+
+#sign-in-btn:active {
+    color: #000;
+    /* how to contain the gradient to form div only? */
+}
+
+#sign-in-btn:active:after {
+    background: transparent;
+}
+
+#sign-in-btn:hover:before {
+    opacity: 1;
+}
+
+#sign-in-form:after {
+    z-index: -1;
+    content: '';
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    /* background: #111; */
+    left: 0;
+    top: 0;
+    border-radius: 80%;
+}
+
+@keyframes glowing {
+    0% {
+        background-position: 0 0;
+    }
+    50% {
+        background-position: 100% 100%;
+    }
+    100% {
+        background-position: 0 0;
+    }
 }
