eggImg now uses new sprites via classList.replace

--- a/styles/sprites.css
+++ b/styles/sprites.css
@@ -1,3 +1,11 @@
+/* #test {
+    position: absolute;
+    height: 500px;
+    width: 500px;
+    border: solid black 1px;
+    background: transparent url('/assets/young/egg/move.png') 0 0 no-repeat;
+} */
+
 .animation-egg-move {
     position: absolute;
     background: transparent url('/assets/young/egg/move.png') 0 0 no-repeat;
