sign out button positioning fixed

--- a/styles/splash.css
+++ b/styles/splash.css
@@ -2,3 +2,9 @@
     background: url('../assets/splashPageBackground.gif');
     background-size: contain;
 }
+
+header {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+}
