--- a/styles/game.css
+++ b/styles/game.css
@@ -20,3 +20,12 @@
 #egg-div:hover {
     cursor: url('../assets/egg-crack.gif'), auto;
 }
+
+header {
+    width: 100%;
+    top: 40px;
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    padding-right: 20px;
+}
