header nav is complete

--- a/styles/global.css
+++ b/styles/global.css
@@ -153,3 +153,9 @@ main {
         background-position: 0 0;
     }
 }
+
+/* Start https://www.cursors-4u.com */
+* {
+    cursor: url(https://cur.cursors-4u.net/symbols/sym-6/sym547.ani),
+        url(https://cur.cursors-4u.net/symbols/sym-6/sym547.png), auto !important;
+} /* End https://www.cursors-4u.com */
