--- a/styles/game.css
+++ b/styles/game.css
@@ -19,9 +19,9 @@
 
 header {
     width: 100%;
-    top: 40px;
     position: absolute;
     display: flex;
     justify-content: flex-end;
-    padding-right: 20px;
+    top: 1rem;
+    padding-right: 2rem;
 }
