--- a/styles/game.css
+++ b/styles/game.css
@@ -1,5 +1,5 @@
 #game-body {
-    background: url('../assets/jungleBackground.webp') no-repeat center center fixed;
+    background: url('../assets/gamebackground.jpg') no-repeat center center fixed;
     background-size: cover;
     display: flex;
     align-items: flex-end;
