--- a/styles/splash.css
+++ b/styles/splash.css
@@ -14,6 +14,7 @@ header {
 }
 
 #dino-button-container {
+    display: flex;
     left: 50%;
     transform: translateX(-50%);
     position: absolute;
