added button styling in game.css

--- a/styles/game.css
+++ b/styles/game.css
@@ -34,3 +34,16 @@ header {
     padding-top: 20px;
     height: 432px;
 }
+
+#action-buttons-container {
+    display: flex;
+    justify-content: flex-end;
+}
+
+.game-button {
+    padding: 12px;
+    margin: 5px;
+    background: coral;
+    font-size: 1.5rem;
+    box-shadow: 0 1px 3px rgba(3, 19, 1, 0.75), 0 1px 5px rgba(0, 0, 0, 0.75);
+}
